Raise KeyError instead of returning None, so None can be used as a value as any other